--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ DB_PASSWORD = "gonzalez112"
 
 PROFILES_PICTURES="/uploads/"
 
-NODE_ENV="development"
+NODE_ENV="production"
 
 SECRET_KEY = "joe)#ka"
